# toavif

./: README.md  avif_config.json  avif_converter.py  install.bat  main.py  pyproject.toml  requirements.txt  run.bat
